<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    tools:context=".SecondFragment">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background"
        android:background="@drawable/flower" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="*"
        android:layout_marginTop="30dp"
        >
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_1"
                android:paddingBottom="10dp"
                android:id="@+id/namename1"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/player_2"
                android:id="@+id/namename2"
                android:textSize="20sp"
                android:layout_gravity="center" />
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:id="@+id/p1"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:id="@+id/p2"
                android:textSize="20sp"
                android:layout_gravity="center" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:id="@+id/s1"
                android:text="score"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:id="@+id/s2"
                android:text="score"
                android:textSize="20sp"
                android:layout_gravity="center" />
        </TableRow>


        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="20sp"
                android:text="@string/zero"

                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:textSize="20sp"
                android:text="@string/zero"
                android:layout_gravity="center"/>
        </TableRow>


        <TableRow>
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/who"
                android:id="@+id/textView6"
                android:textSize="20sp"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imageView"
                android:src="@drawable/die1"
                android:layout_span="2"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_this_turn"
                android:id="@+id/textView9"
                android:textSize="20sp"
                android:layout_span="2"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textView10"
                android:textSize="20sp"
                android:layout_span="2"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>
        </TableRow>



        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/roll_die"
                android:id="@+id/button"
                android:layout_gravity="center"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_turn"
                android:id="@+id/button2"
                android:layout_gravity="center"/>
        </TableRow>



    </TableLayout>
</FrameLayout>
