<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".FirstFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/background"
        android:background="@drawable/flower" />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:stretchColumns="*"
        android:layout_marginTop="30dp"
        >
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/player_1"
                android:id="@+id/textView2"
                android:textSize="20sp"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="40dp"
                android:text="@string/player_2"
                android:id="@+id/textView"
                android:textSize="20sp"
                android:layout_gravity="center" />
        </TableRow>



        <TableRow>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:id="@+id/editText"
                android:textSize="20sp"
                android:layout_gravity="center"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="30dp"
                android:id="@+id/editText2"
                android:textSize="20sp"
                android:layout_gravity="center"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingBottom="60dp"
                android:paddingTop="40dp"
                android:text="@string/instruction"
                android:id="@+id/instruction"
                android:textSize="20sp"
                android:layout_span="2"
                android:layout_gravity="center" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_game"
                android:id="@+id/newgame"
                android:onClick="newGame"
                android:layout_span="2"
                android:layout_gravity="center"/>
        </TableRow>


    </TableLayout>
</FrameLayout>
